# infra_app

./: .gitignore  docker-compose.yml
backend/: Dockerfile  consumers.py  db.sqlite3  pyproject.toml
backend/backend/: asgi.py  consumers.py  settings.py  urls.py
backend/backend/notifications/: consumers.py  kafka_consumer.py  routing.py
backend/core/: admin.py  consumers.py  kafka_producer.py  models.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_notification_is_read_alter_notification_user.py  0003_userprofile.py  0004_notification_related_post_post_is_repost_and_more.py  0005_alter_userprofile_avatar_alter_userprofile_bio.py
backend/core/utils/: kafka_producer.py
backend/user_profile/: serializers.py  urls.py  views.py
backend_fast/api_gateway/: pyproject.toml
backend_fast/api_gateway/app/: main.py
backend_fast/auth_service/: Dockerfile  pyproject.toml
backend_fast/auth_service/alembic/: env.py
backend_fast/auth_service/app/: database.py  db.py  main.py  models.py  routes.py  schemas.py  services.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: Notification.tsx  PostCard.tsx  PostForm.tsx  ThemeToggle.tsx
frontend/src/features/: authSlice.ts  configSlice.ts  notificationsSlice.ts  postsSlice.ts
frontend/src/interfaces/: auth.ts  features.ts
frontend/src/pages/: Home.tsx  Login.tsx  Profile.tsx
frontend/src/services/: api.ts  interceptor.ts
frontend/src/store/: authSlice.ts  hooks.ts  store.ts
(+7 files in other folders)
